--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
+pyyaml==5.4.1
 snowflake-connector-python==3.0.4
+streamlit==1.25.0
+streamlit-authenticator==0.2.1
+pandas
+datetime==4.3
+plotly==5.15.0
